@@ -1,2 +1,0 @@
-com.sun.jersey.server.impl.model.parameter.multivalued.StringReaderProviders$TypeValueOf
-com.sun.jersey.server.impl.model.parameter.multivalued.StringReaderProviders$StringConstructor
